--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   "dependencies": {
     "ejs-mate": "^2.3.0",
     "express": "^4.15.3",
+    "google-auth-library": "^0.10.0",
+    "googleapis": "^20.0.1",
     "path": "^0.12.7",
     "socket.io": "^2.0.3"
   }
