--- a/package.json
+++ b/package.json
@@ -18,11 +18,9 @@
   },
   "homepage": "https://github.com/ESN-Russia/meeting-table#readme",
   "dependencies": {
-    "ejs-mate": "^2.3.0",
-    "express": "^4.15.3",
-    "google-auth-library": "^0.10.0",
-    "googleapis": "^20.0.1",
-    "path": "^0.12.7",
-    "socket.io": "^2.0.3"
+    "ejs-mate": "2.3.0",
+    "express": "4.15.3",
+    "path": "0.12.7",
+    "socket.io": "2.0.4"
   }
 }
