--- a/package.json
+++ b/package.json
@@ -18,9 +18,14 @@
   },
   "homepage": "https://github.com/ESN-Russia/meeting-table#readme",
   "dependencies": {
+    "dotenv": "^5.0.1",
     "ejs-mate": "2.3.0",
     "express": "4.15.3",
     "path": "0.12.7",
     "socket.io": "2.0.4"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.2",
+    "eslint": "^4.18.2"
   }
 }
