--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "meeting-table",
-  "version": "1.0.0",
-  "description": "Meeting Table for ESN Russia",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/ESN-Russia/meeting-table.git"
-  },
-  "author": "Andrey Sokolov <andresokol>",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/ESN-Russia/meeting-table/issues"
-  },
-  "homepage": "https://github.com/ESN-Russia/meeting-table#readme",
-  "dependencies": {
-    "dotenv": "^5.0.1",
-    "ejs-mate": "2.3.0",
-    "express": "4.15.3",
-    "path": "0.12.7",
-    "socket.io": "2.0.4"
-  },
-  "devDependencies": {
-    "babel-eslint": "^8.2.2",
-    "eslint": "^4.18.2"
-  }
+    "name": "meeting-table",
+    "version": "1.0.0",
+    "description": "Meeting Table for ESN Russia",
+    "main": "index.js",
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "start": "node index.js"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/ESN-Russia/meeting-table.git"
+    },
+    "author": "Andrey Sokolov <andresokol>",
+    "license": "MIT",
+    "bugs": {
+        "url": "https://github.com/ESN-Russia/meeting-table/issues"
+    },
+    "homepage": "https://github.com/ESN-Russia/meeting-table#readme",
+    "dependencies": {
+        "dotenv": "^5.0.1",
+        "ejs-mate": "^2.3.0",
+        "express": "^4.15.3",
+        "path": "^0.12.7",
+        "socket.io": "2.0.4"
+    },
+    "devDependencies": {
+        "babel-eslint": "^8.2.2",
+        "eslint": "^4.18.2"
+    }
 }
